Sat Jun 23 13:21:05 2012  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: update where gimps is up to

Thu May 31 11:54:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, help/C/gel-function-list.xml: Add
	  LineplotDrawAxisLabels parameter and corresponding checkbox on the
	  plotting window to allow not drawing axis labels, useful for
	  doing tiny scaled down diagrams.

Sat Apr 28 16:58:20 2012  Jiri (George) Lebl <jirka@5z.com>

	* Makefile.am, configure.in, atlapack, atblas: add LAPACK/BLAS, but
	  so far we don't use them.  We'll probably want to cull the parts
	  we don't use otherwise it just takes forever to compile

Sun Apr 22 23:52:34 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: avoid linked lists on expanding just one row,
	  we can do that directly faster.  Improves speed of things
	  that concatenate things like [a,b,c].  For example sorting.

	* src/geniustests.txt: add some tests

Sun Apr 22 17:53:07 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/structs.h, src/eval.c: MatrixRow tree node is also
	  used in expanding matrices, not just entering, so
	  gint16 was just not enough for width.  So can now
	  handle wider matrices in expansion.

Wed Apr 11 16:56:15 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/symbolic.c: fix derivatives of Im and Re to be the z
	  derivatives.

	* src/funclib.c, src/symbolic.c, help/C/gel-function-list.xml:
	  add the sinc function and its derivative.

Mon Apr 09 21:12:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/matop.c: forgotten nargs setting led to a crash when
	  adding fake conj.
	
	* src/compil.c, src/matop.c: correctly set uninitialized flag
	  for identifiers.

	* src/eval.[ch]: avoid some uninitialized compilation warnings.

Mon Apr 09 20:44:03 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/structs.h: Store state of "uninitialized"
	  with identifier nodes so that we don't double warn of uninitialized
	  identifiers with something like "x+5"
