@@ -1,3 +1,8 @@
+Fri Jul 13 07:15:05 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/genius.c: avoid a small delay on history, it seems no longer
+	  necessary.  Thanks to Ingo Ruhnke.
+
 Sat Jun 23 13:21:05 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/number_theory/primes.gel: update where gimps is up to
